Accounts CRUD Completed

--- a/BMS/BMS.vcxproj
+++ b/BMS/BMS.vcxproj
@@ -149,7 +149,13 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Abstracts.h" />
+    <ClInclude Include="Accounts.h" />
     <ClInclude Include="ApplicationMenus.h" />
+    <ClInclude Include="Customer.h" />
+    <ClInclude Include="Person.h" />
+    <ClInclude Include="Transactions.h" />
+    <ClInclude Include="Users.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
