Some Architectural Changes

--- a/BMS.Comman/BMS.Comman.vcxproj
+++ b/BMS.Comman/BMS.Comman.vcxproj
@@ -140,6 +140,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Shared.h" />
+    <ClInclude Include="Accounts.h" />
+    <ClInclude Include="Base.h" />
+    <ClInclude Include="Customer.h" />
+    <ClInclude Include="Person.h" />
+    <ClInclude Include="Transactions.h" />
+    <ClInclude Include="Users.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
