--- a/BMS.ATM/BMS.ATM.vcxproj
+++ b/BMS.ATM/BMS.ATM.vcxproj
@@ -148,6 +148,9 @@
       <Project>{5bdbad55-5c23-4152-9060-123da4a94ca3}</Project>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ApplicationMenus.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
